<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/dlgSrcManageDlgPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/dlgManageSrcPlay"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dlgSrcManageDlgUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/dlgManageSrcUpdate"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dlgSrcManageDlgDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/dlgManageSrcDel"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dlgSrcManageDlgCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:text="@string/dlgCancel"
        android:textSize="20sp" />

</LinearLayout>
